# interview_challenges

./: README.md
appmax/: README.md  docker-compose.yml  query.sql
appmax/src/: main.py
lis/: LICENSE  README.md  Taskfile.yml
lis/.devcontainer/: devcontainer.json
ospa_place/: .gitignore  README.md  docker-compose.yml  enunciado.md  fs_manager.py  init-db.sql  makefile  taskfile.yml
ospa_place/config/: readme.md
ospa_place/config/db/: init_db.sql
ospa_place/config/services/: etl.yml  minio.yml  postgis.yml
ospa_place/config/utils/: init_fs.py
ospa_place/explore/: bairros.ipynb  main.ipynb
ospa_place/notebooks/: 02_postgis.ipynb
ospa_place/src/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt  settings.py
ospa_place/src/connections/: dabh.py
ospa_place/src/models/: atividade_economica.py  bairro_oficial.py  ponto_onibus.py
ospa_place/src/services/bronze/: bairros_bronze.py  empresas_bronze.py  onibus_bronze.py
ospa_place/src/services/extract/: bairros_bronze.py  empresas_bronze.py  onibus_bronze.py
ospa_place/src/services/silver/: bairros_silver.py  empresas_silver.py  onibus_silver.py
ospa_place/src/services/transform/: bairros_silver.py  empresas_silver.py  onibus_silver.py
ospa_place/src/utils/: dabh.py  logger.py  settings.py
