[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fsspec>=2026.3.0",
    "geoalchemy2>=0.19.0",
    "geopandas>=1.1.3",
    "ipykernel>=7.2.0",
    "pandas>=3.0.2",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=23.0.1",
    "s3fs>=2026.3.0",
    "sqlalchemy>=2.0.49",
]
